# llm-agent

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
examples/: calculator.cpp  file_agent.cpp  web_search_mock.cpp
include/: llm_agent.hpp
